# non-profit-dashboard

./: .env.sample  .gitignore  Pipfile  README.md  package-lock.json  pyproject.toml
apps/campaigns/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/campaigns/migrations/: 0001_initial.py  0002_alter_donation_donor.py  0003_alter_donation_donor_alter_patient_name.py  0004_rename_name_patient_profile.py  0005_alter_patient_profile.py  0006_monetarycampaign_is_active_and_more.py  0007_remove_cause_campaign_type_and_more.py  0008_rename_description_patient_notes_patient_causes.py  0009_cause_title_alter_cause_description_and_more.py  0010_alter_cause_title.py  0011_remove_donation_campaign_type_donation_campaign_and_more.py  (+21 more)
apps/contact_analytics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/donor_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/mosaico/: apps.py  models.py  urls.py  views.py
apps/scheduler/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  custom_permissions.py  email.py  forms.py  managers.py  models.py  serializers.py  timezone_middleware.py  urls.py  views.py
config/: celery.py  context_middleware.py  settings.py  urls.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/src/: apiClient.js
utils/: beneficiary_registry.py  exception_handler.py  hash_photo.py  photo_validation.py  various_permissions.py
(+915 files in other folders)
